Fix star map map image alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,6 +7,14 @@
 	}
 }
 
+.star-map {
+	.bxslider {
+		li {
+			left: 0;
+		}
+	}
+}
+
 .star-map, .tephi {
 
 	img {
